--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "finalproject-ajskas",
   "version": "1.0.0",
   "description": "https://github.com/AJ906/finalproject-ajskas.git",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'viben/*'\" \"npm run viben\"",
-    "client": "cd viben && npm run start",
-    "install": "cd viben && yarn install",
-    "build": "cd viben && npm run build",
-    "heroku-postbuild": "npm run build"
+    "server": "node server.js",
+    "client": "node scripts/start-client.js",
+    "build": "node scripts/build.js",
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "installDeps": "yarn install && cd client && yarn install"
   },
   "repository": {
     "type": "git",
