--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall":"cd viben && yarn install && yarn run build"
+    "start": "cd server && node server.js"
   },
   "repository": {
     "type": "git",
