--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall":"cd viben && npm install && yarn install && yarn run build"
+    "postinstall":"cd viben && npm install && yarn install && yarn run build",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
