--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "finalproject-ajskas",
   "version": "1.0.0",
   "description": "https://github.com/AJ906/finalproject-ajskas.git",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
