--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start": "node server.js",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'viben/*'\" \"npm run viben\"",
     "client": "cd viben && npm run start",
-    "install": "cd viben && npm install && yarn start",
+    "install": "cd viben && yarn install",
     "build": "cd viben && npm run build",
     "heroku-postbuild": "npm run build"
   },
